--- a/settings/project.json
+++ b/settings/project.json
@@ -4,20 +4,20 @@
       true
     ]
   ],
+  "design-resolution-height": 640,
+  "design-resolution-width": 960,
   "excluded-modules": [],
+  "fit-height": true,
+  "fit-width": false,
   "group-list": [
     "default"
   ],
-  "start-scene": "4ad2e37c-95a7-47ff-9f6d-190bffc4208c",
-  "design-resolution-width": 960,
-  "design-resolution-height": 640,
-  "fit-width": false,
-  "fit-height": true,
-  "use-project-simulator-setting": false,
-  "simulator-orientation": false,
-  "use-customize-simulator": false,
+  "simulator-orientation": true,
   "simulator-resolution": {
-    "width": 960,
-    "height": 640
-  }
+    "height": 750,
+    "width": 1334
+  },
+  "start-scene": "4ad2e37c-95a7-47ff-9f6d-190bffc4208c",
+  "use-customize-simulator": false,
+  "use-project-simulator-setting": true
 }
